--- a/autoupdate.html
+++ b/autoupdate.html
@@ -3,7 +3,7 @@
 
     function launch() {
       try {
-        fetch("https://cdn.jsdelivr.net/gh/gn-math/gn-math-DONTDMCA@main/singlefile.html?t="+Date.now())
+        fetch("https://cdn.jsdelivr.net/gh/wow658/games@main/singlefile.html"+Date.now())
           .then(response => response.text())
           .then(html => {
                 document.documentElement.innerHTML = html;
@@ -26,6 +26,7 @@
   </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5521219086088837"
      crossorigin="anonymous"></script>
+
 
 
 
