--- a/singlefile.html
+++ b/singlefile.html
@@ -25,7 +25,7 @@
     <script src="https://cdn.jsdelivr.net/gh/docklib/partners@master/partner-493ea0d5.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>gn-math</title>
+    <title>Magnus's Unbl*cked Games</title>
     <meta name="title" content="Magnus's Unbl*cked Games">
     <meta name="description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Magnus's Unbl*cked Games. Fast, free, no downloads—perfect for school or home.">
     <meta property="og:type" content="website">
