--- a/singlefile.html
+++ b/singlefile.html
@@ -38,7 +38,7 @@
     <meta name="twitter:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Magnus's Unbl*cked Games. Fast, free, no downloads—perfect for school or home.">
     <style>
         :root {
-    --primary: #fc2651;
+    --primary: #0000FF;
     --primary-hover: #e91e47;
     --primary-light: rgba(252, 38, 81, 0.1);
     --primary-lighter: rgba(252, 38, 81, 0.05);
